# embedding-debugger

./: .gitignore  Cargo.toml  readme.md
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/app/src/ui/: app.rs  credentials.rs  mod.rs  persistence.rs  sidebar.rs  status_bar.rs  viewer.rs
crates/core/: Cargo.toml
crates/core/src/: embedding.rs  lib.rs  projection.rs  token.rs
crates/inference/: Cargo.toml
crates/inference/src/: client.rs  lib.rs  provider.rs
crates/viz/: Cargo.toml
crates/viz/src/: camera.rs  lib.rs  point_cloud.rs
samples/: large_test_1000.json
