[package]
name = "embedding-inference"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
embedding-core = { workspace = true }
denkwerk = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
